2012-02-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use an after-string property instead of
	a before-string property to show the help on an edit buffer.
	Thanks to irie who discoverd the problem and wrote a suitable
	code.
	(twittering-edit-setup-help): set an after-string property of the
	overlay for the help and give high priority to the overlay.

	* twittering-mode.el: Remove duplicates in a merge timeline spec.
	(twittering-extract-timeline-spec): remove duplicates in a list of
	timeline specs in a merge timeline spec.
	* test/test-twittering-mode.el: Add a test of reducing duplicates
	in a merge timeline spec.

	* twittering-mode.el: Remove duplicates in the list of primary
	base timeline specs.
	(twittering-get-primary-base-timeline-specs): remove duplicates in
	the list of primary base timeline specs.
	* test/test-twittering-mode.el: Add a test of dependence of
	composite timeline specs.

	* twittering-mode.el: Fix the behavior of the function
	`twittering-get-current-status-head' for the position following
	the header. Thanks to lemit who reported the problem.
	The previous one made `twittering-replied-statuses-visible-p'
	return an incorrect value on the position following the header.
	(twittering-get-current-status-head): fix the behavior when POS
	points to the beginning of a field and also points to the end of
	another field. The function previously returned the head of the
	previous field.

	* twittering-mode.el: Fix the behavior of `twittering-get-id-at'
	on the head of the footer.
	(twittering-get-id-at): use `twittering-get-current-status-head'
	instead of `twittering-get-previous-status-head'. On the head of
	the footer, the former returns the head of the footer and the
	latter returns the head of the status followed by the footer.

2012-02-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Delete a specified status from composite
	timeline buffers.
	(twittering-get-dependent-timeline-specs): new function.